Fix dark mode for shiki

--- a/src/app/(main)/post/[slug]/_components/CodeBlock/styles.css
+++ b/src/app/(main)/post/[slug]/_components/CodeBlock/styles.css
@@ -14,6 +14,8 @@
     width: fit-content;
     min-width: 100%;
     flex-direction: column;
+    font-size: var(--text-sm);
+    line-height: 26px;
 
     & > span {
       flex-grow: 1;
@@ -25,10 +27,15 @@
     }
   }
 
-  @media (prefers-color-scheme: dark) {
-    .shiki,
-    .shiki span {
+  .shiki span {
+    :root[data-theme="dark"] & {
       color: var(--shiki-dark) !important;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root[data-theme="system"] & {
+        color: var(--shiki-dark) !important;
+      }
     }
   }
 }
